Introdução ao HTML no arquivo index.html

--- a/index.html
+++ b/index.html
@@ -3,9 +3,17 @@
 <head>
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title>Curso de Git</title>
+    <title>Introdução ao HTML</title>
 </head>
 <body>
-    <h1>Teste no Github</h1>
+    <header>
+        <h1>Introdução ao HTML!</h1>
+    </header>
+    <p>
+        Aula introdutória sobre HTML do bootcamp "Desenvolvedor Front End" da Digital Innovation One.
+    </p>
+    <footer>
+        Desenvolvido por Alec Mariano, 2020.
+    </footer>
 </body>
 </html>
