--- a/index.html
+++ b/index.html
@@ -6,9 +6,36 @@
     <title>Introdução ao HTML</title>
 </head>
 <body>
+    <nav>
+        <p>Menu</p>
+        <ul>
+            <li><a href="#linkedin">LinkedIn</a></li>
+            <li><a href="#github">Github</a></li>
+            <li>Contato</li>
+        </ul>
+    </nav>
     <header>
         <h1>Introdução ao HTML!</h1>
     </header>
+
+    <section id="linkedin">
+        <h2>LinkedIn</h2>
+        <p>
+            Clique no ícone abaixo para acessar meu perfil no LinkedIn.
+        </p>
+        <div>
+            <img src="img/linkedin.png" width="50">
+        </div>
+    </section>
+    <section id="github">
+        <h2>GitHub</h2>
+        <p>
+            Clique no ícone abaixo para acessar meu perfil no GitHub.
+        </p>
+        <div>
+            <img src="img/github.png" width="50">
+        </div>
+    </section>
     <p>
         Aula introdutória sobre HTML do bootcamp "Desenvolvedor Front End" da Digital Innovation One.
     </p>
